# r2d2

./: MANIFEST.in  README.md  pyproject.toml
src/r2d2/: extract.py  extract_kapture.py  viz_heatmaps.py
src/r2d2/nets/: losses.py  reliability_loss.py  repeatability_loss.py
src/r2d2/tools/: dataloader.py
